alpm-srcinfo/tests/parse_error_snapshots/invalid_checksum.snap
---
source: alpm-srcinfo/tests/parse_errors.rs
description: "pkgbase = test\n\tpkgver = 1.0.0\n\tpkgrel = 1\n\tarch = x86_64\n\t# Sha256 checksum is way too long\n\tsha256sums = 123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890\n\npkgname = test\n"
expression: "format!(\"{error}\")"
---
File parsing error:
error: invalid skippable checksum
  | 
5 |  # Sha256 checksum is way too long
6 |  sha256sums = 123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890
  |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^ expected end of checksum. Checksum is too long.
  | 
  = while parsing:
    package_base_line: (sha256sums = 1234567…)
    └ source property: ( = 12345678901234567…)
      └ skippable checksum: (12345678901234567890…)
        → expected end of checksum. Checksum is too long., a hash digest with the appropriate length for the given algorithm, or an uppercase 'SKIP'
